@@ -9,6 +9,7 @@ Bugs fixed:
 - 2891367 Error processing content-length
 - 2933087 Small leak in cimXmlRequest:getProperty()
 - 2932809 sfcb 1.3.6 crashes when provider user is set to sfcb
+- 2934540 sfcb may respond with incorrect association provider
 
 Changes in 1.3.6
 ================
